[gd_scene load_steps=4 format=3 uid="uid://v54pdid1wys0"]

[ext_resource type="Script" path="res://autoloads/pause_menu.gd" id="1_pd1qv"]

[sub_resource type="Gradient" id="Gradient_aroom"]
colors = PackedColorArray(0, 0, 0, 0.407843, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0gpe4"]
gradient = SubResource("Gradient_aroom")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pd1qv")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_0gpe4")
expand_mode = 1

[node name="Contents" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Contents"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 41
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Contents"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
alignment = 2

[node name="ResumeButton" type="Button" parent="Contents/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="Contents/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Control" type="Control" parent="Contents/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="Contents/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="QuitConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
ok_button_text = "Quit"
dialog_text = "Are you sure you want to quit?"
cancel_button_text = "Stay"

[connection signal="pressed" from="Contents/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="confirmed" from="QuitConfirmationDialog" to="." method="_on_quit_confirmation_dialog_confirmed"]
